# DeveloperTools

./: .gitignore  .ninja_deps  .ninja_log  AppInstaller.db  AppInstaller.h  AppInstaller.hpp  AppInstaller.sqbpro  BuildProject  BuildProject.bat  BuildProject.cpp  BuildProject.sh  BuildTests.bat  BuildTests.sh  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Compile.txt  DeepForgeToolset.cbp  DeepForgeToolset.code-workspace  DeveloperTools  DeveloperTools.code-workspace  DeveloperTools.cpp  Dockerfile  Download.cpp  Info.plist  InstallCompiller.bat  InstallLibraries_Linux.sh  LICENSE  Makefile  Microsoft.DesktopAppInstaller_8wekyb3d8bbwe.msixbundle  README.md  Versions.db  Versions.sqbpro  Versions.sql  build.ninja  cmake_install.cmake  filename  test  test.cpp  (+7 more)
.github/: FUNDING.yml
.github/workflows/: CI.yml  CI_dev.yml  CI_master.yml  DeepForgeToolset_CI.yml  DeepForgeToolset_CL.yml  c-cpp.yml  release-package.yml
InstallerDeepForge_Toolset/src/Linux/: CMakeCache.txt  CMakeLists.txt  InstallerDeveloperTools  InstallerDeveloperTools.cpp  InstallerDeveloperTools.hpp  Makefile  Progressbar.hpp  cmake_install.cmake
InstallerDeepForge_Toolset/src/MacOS/: CMakeLists.txt  InstallerDeveloperTools.cpp  InstallerDeveloperTools.hpp
InstallerDeepForge_Toolset/src/Windows/: CMakeLists.txt  InstallerDeveloperTools.cpp  InstallerDeveloperTools.hpp  Progressbar.hpp
InstallerDeveloperTools/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  InstallerDeveloperTools.cpp  InstallerDeveloperTools.hpp  build.ninja  cmake_install.cmake
InstallerDeveloperTools/Linux/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  InstallerDeveloperTools  InstallerDeveloperTools.cpp  InstallerDeveloperTools.hpp  Makefile  cmake_install.cmake
InstallerDeveloperTools/MacOS/: CMakeLists.txt  InstallerDeveloperTools.cpp
InstallerDeveloperTools/Windows/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  InstallerDeveloperTools.cpp  InstallerDeveloperTools.hpp  build.ninja  cmake_install.cmake  resource.rc  resource.res
InstallerDeveloperTools/src/Linux/: CMakeCache.txt  CMakeLists.txt  InstallerDeveloperTools.cpp  InstallerDeveloperTools.hpp
InstallerDeveloperTools/src/MacOS/: resource.rc
InstallerDeveloperTools/src/Windows/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  InstallerDeveloperTools.hpp  build.ninja
Scripts/: AddKotlinPath.ps1
cmake/: CompileResources.cmake  DeepForgeToolset.plist.in  DownloadDependecies.cmake
include/Database/: DatabaseAPI.hpp
include/DeepForge-Toolset/: Advanced.hpp  DeepForge-Toolset.hpp  Linux.hpp  Windows.hpp  macOS.hpp
include/Logger/: Logger.hpp
include/Progressbar/: Progressbar.hpp
include/miniz/: miniz.h
src/: AppInstaller_Linux.cpp  AppInstaller_Linux.hpp  AppInstaller_MacOS.hpp  AppInstaller_Windows.cpp  AppInstaller_Windows.hpp  AppInstaller_macOS.cpp  AppInstaller_macOS.hpp  DatabaseConnect.cpp  DatabaseConnect.hpp  DeepForge-Toolset.cpp  DeepForgeToolset  DeepForgeToolset.cpp  DeepForgeToolset.hpp  DeepForgeToolset_Linux.hpp  DeepForgeToolset_Windows.hpp  DeepForgeToolset_macOS.hpp  DeveloperTools.cpp  DeveloperTools.hpp  Linux.cpp  Logger.cpp  Logger.hpp  LogoBanner.txt  Progressbar.hpp  Windows.cpp  macOS.cpp  resource.rc  resource.res
src/DB/: AppInstaller.db  AppInstaller.db-journal  AppInstaller.sqbpro  DeepForge-Toolset_Versions.sqbpro  Versions.db  Versions.sqbpro
src/DB/Backup/: AppInstaller.sql  DeepForge-Toolset_Versions.sql  Versions.sql
src/GUI/: DeepForgeToolset.cpp  DeepForgeToolset.h  main.cpp
src/Installer/: CMakeLists.txt  DatabaseConnect.cpp  DatabaseConnect.hpp  InstallerDeepForge_Toolset.cpp
src/Installer/include/: Installer_Linux.hpp  Installer_Windows.hpp  Installer_macOS.hpp  Progressbar.hpp
src/Installer/src/Linux/: BuildProject
src/Installer/src/MacOS/: resource.res
src/InstallerDeepForge_Toolset/src/Linux/: Makefile
src/InstallerDeepForge_Toolset/src/MacOS/: InstallerDeveloperTools.cpp
src/Linux/: AppInstaller.hpp  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DeveloperTools  DeveloperTools.cpp  Logger.hpp  Makefile  cmake_install.cmake  resource.rc  resource.res
src/Logo/: DeepForgeToolset.icns
src/MacOS/: AppInstaller.hpp  CMakeLists.txt  DeveloperTools.cpp
src/Scripts/: AddEclipsePath.ps1  AddKotlinPath.ps1  CheckWSL.sh  InstallPython-3.9_openSUSE.sh  RemoveEclipsePath.ps1  RemoveKotlinPath.ps1  RemoveWgetPath.ps1
src/UpdateManager/: BuildProject.bat  BuildProject.sh  DatabaseConnect.hpp  UpdateManager  UpdateManager.cpp
src/UpdateManager/include/: UpdateManager_Windows.hpp  UpdateManager_macOS.hpp
src/UpdateManager/lib/: libZipper.1.0.4.dylib
src/Windows/: .ninja_deps  .ninja_log  AppInstaller.hpp  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DeveloperTools.cpp  build.ninja  cmake_install.cmake
src/build-GUI-Desktop-Release/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_DeepForgeToolset.h
src/build-GUI-Desktop-Release/release/: moc_predefs.h
src/include/: Logger.hpp
src/lib/: libcurl.4.8.0.dylib  libjsoncpp.25.dylib  libtclsqlite3.dylib
src/locale/: locale_en.json  locale_ru.json
src/test/: DatabaseTest.cpp  MainTest.cpp
src/tests/: MainTest.cpp
src/utils/: pathman-linux-armv8
