cmake_minimum_required(VERSION 3.00)
project(DeveloperTools)
include (GNUInstallDirs)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ -lcurl  ${CMAKE_CXX_STANDARD_LIBRARIES}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -lcurl ${CMAKE_CXX_STANDARD_LIBRARIES}")
set(SOURCE_FILES DeveloperTools.cpp)
add_executable(DeveloperTools ${SOURCE_FILES})
add_compile_options(-w)
target_sources(DeveloperTools PRIVATE resource.rc)
target_link_libraries(DeveloperTools ${CMAKE_EXE_LINKER_FLAGS})