cmake_minimum_required(VERSION 3.00)
project(InstallerDeveloperTools)
include (GNUInstallDirs)
set(CMAKE_CXX_STANDARD 20)
# set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ -lcurl  ${CMAKE_CXX_STANDARD_LIBRARIES}")
#add_executable(Download main.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -lcurl")
set(SOURCE_FILES InstallerDeveloperTools.cpp)
add_executable(InstallerDeveloperTools ${SOURCE_FILES})
add_compile_options(-w)
target_sources(InstallerDeveloperTools PRIVATE resource.rc)
target_link_libraries(InstallerDeveloperTools ${CMAKE_EXE_LINKER_FLAGS})